# job_manager

./: .gitignore  DDL_script.sql  README.md  model_diagram.uml  pyproject.toml
job_manager_proj/: Dockerfile  docker-compose.yml  dockerfile  manage.py  prometheus.yml  prospector.yml  pyproject.toml  shared_classes.py  shared_mixins.py
job_manager_proj/catalog/: admin.py  forms.py  models.py  resources.py
job_manager_proj/catalog/migrations/: 0001_initial.py  0002_alter_typeofjobs_options.py  0002_signatory_is_active.py  0003_month_year.py  0004_alter_company_bank_name.py  0005_department_employee_headofdepartment_department_head.py  0006_alter_month_count_of_working_days_and_more.py
job_manager_proj/commerce/: admin.py  calculations.py  forms.py  models.py  resources.py  services.py  tasks.py
job_manager_proj/commerce/migrations/: 0001_initial.py  0002_alter_actofcompletedwork_options_and_more.py  0002_alter_serviceagreement_service_descriptions.py  0002_remove_serviceagreement_act_status_and_more.py  0003_budgetcalculation_vat.py  0003_remove_commercialproposal_type_of_jobs_and_more.py  0004_commercialproposal_proposal_file.py  0004_remove_agreementstage_service_agreement_and_more.py  0005_budgetcalculation_calculation_file.py  0005_serviceagreement_act_file_and_more.py  0006_alter_budgetcalculation_profit_and_more.py  0006_budgetcalculation_profit_percentage_and_more.py  0007_alter_serviceagreement_number.py
job_manager_proj/config/nginx-conf.d/: nginx.conf
job_manager_proj/config/postgres-exporter/: queries.yml
job_manager_proj/config/postgresql/: postgresql.conf
job_manager_proj/config/prometheus/: prometheus.yml
job_manager_proj/config/prometheuscommunity-postgres-exporter/: queries.yml
job_manager_proj/continuos_delivery/: apps.py  urls.py  views.py
job_manager_proj/job_manager_app/: admin.py  apps.py  models.py  services.py
job_manager_proj/job_manager_app/migrations/: 0001_initial.py  0002_alter_serviceagreement_company_and_more.py  0002_auto_20230321_1420.py  0003_auto_20230319_1120.py  0004_actofcompletedwork_month_of_accounting_act_in_salary_and_more.py  0005_auto_20230319_1519.py  0006_alter_actofcompletedwork_month_of_completed_and_more.py  0007_alter_actofcompletedwork_month_of_completed.py  0008_remove_actofcompletedwork_amount_currency_and_more.py  __init__.py
job_manager_proj/job_manager_app/tests/: __init__.py  test_admin_site.py  test_models.py  test_sql_injections.py
job_manager_proj/job_manager_proj/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
job_manager_proj/management/: admin.py  forms.py  models.py  resources.py  serializers.py  services.py  urls.py  views.py
job_manager_proj/management/migrations/: 0001_initial.py  0002_alter_headofdepartment_options.py  0003_alter_department_name.py  0004_remove_employee_department_and_more.py
job_manager_proj/nginx-conf.d/: nginx.conf
job_manager_proj/templates/admin/: change_form.html
job_manager_proj/tests/: __init__.py  test_models.py
job_manager_proj/tests/admin_site/: __init__.py  test_add_new_objects.py  test_delete_objects.py  test_get_changelist_of_objects.py  test_unauthenticated_access.py
job_manager_proj/tests/fixtures/: bankbranchaddress.json  budgetcalculation.json  commercialproposal.json  company.json  department.json  month.json  (+7 more)
(+18 files in other folders)
